Mobile aligning issue

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ body.night .tag {
     border-radius: 50%;
     aspect-ratio: 1;
     height: 20%;
+    vertical-align: middle;
 }
 
 .python p {
